This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-01-23:

- Fixed a rare crash or rare incorrect behaviour in .sh.tilde.{get,set}
  discipline functions for ~ expansion (see 2021-03-16 below).

- Fixed a bug that caused listing the .sh.match variable with ${!.sh.match} to
  show spurious elements.

2024-01-22:

- Fixed a bug in the loop invariants optimizer (SHOPT_OPTIMIZE) that caused
  expansions of name references to be incorrectly treated as invariant so they
  yielded the wrong values. Fix backported from from ksh 93v- 2013-02-13.

- Fixed a buffer overflow that could occur when using tab completion
  with multibyte filenames.

2024-01-21:

- A bug was fixed that caused both the 'set' and 'get'/'getn' discipline
  functions of a variable to be triggered when performing an assignment in
  an arithmetic expression; only the 'set' discipline is now triggered when
  assigning (as was always the documented behaviour). This applies to the
  shell's internal disciplines as well. For example, $RANDOM is no longer
  spuriously read from while seeding it via an arithmetic expression.

- Fixed: assigning to LINENO, RANDOM, or _ via an arithmetic expression gave
  undefined results on systems where sizeof(long double)!=sizeof(double).

2024-01-16:

- Fixed a parsing bug in array subscripts containing '=' in combination with
  a declaration command (such as 'typeset' or 'export'). For instance,
  'typeset -A arr; typeset -i arr[foo=bar]=123' now works correctly.

2024-01-15:

- Fixed a bug, introduced in ksh93q+ 2005-05-22, that stopped an append
  assignment from working together with a declaration command. For example,
  'typeset var+=value' or 'export var+=value' now again work as expected.

2024-01-14:

- Fixed a regression introduced on 2022-11-01 that caused ksh to enter