@@ -1511,7 +1511,6 @@ int sh_reinit(char *argv[])
 	Dt_t	*dp;
 	int	nofree;
 	char	*savfpath = NULL;
-	sh_onstate(SH_INIT);
 	sh.subshell = sh.realsubshell = sh.comsub = sh.curenv = sh.jobenv = sh.inuse_bits = sh.fn_depth = sh.dot_depth = 0;
 	sh.envlist = NULL;
 	sh.last_root = sh.var_tree;
@@ -1520,6 +1519,8 @@ int sh_reinit(char *argv[])
 		sfclose(sh.heredocs);
 		sh.heredocs = 0;
 	}
+	/* Unset tilde expansion disciplines */
+	_nv_unset(SH_TILDENOD,NV_RDONLY);
 	/* save FPATH and treat specially */
 	if(nv_isattr(FPATHNOD,NV_EXPORT))
 		savfpath = sh_strdup(nv_getval(FPATHNOD));
@@ -1566,9 +1567,6 @@ int sh_reinit(char *argv[])
 				/* export all attributes except readonly */
 				nv_offattr(np,NV_RDONLY);
 			}
-			/* unset discipline */
-			if(np->nvfun && np->nvfun->disc)
-				np->nvfun->disc = NULL;
 		}
 		else
 		{
@@ -1688,7 +1686,6 @@ int sh_reinit(char *argv[])
 	/* call user init function, if any */
 	if(sh.userinit)
 		(*sh.userinit)(&sh, 1);
-	sh_offstate(SH_INIT);
 	return 1;
 }
 
